syntax = "proto3";

option java_package = "com.github.jntakpe.users";
option objc_class_prefix = "HLW";

package users;

import "validate/validate.proto";

service UsersService {
  rpc FindByUsername(UsersByUsernameRequest) returns (UserResponse) {}
  rpc Create(UserRequest) returns (UserResponse) {}
}

message UsersByUsernameRequest {
  string username = 1;
}

message UserRequest {
  string username = 1 [(validate.rules).any.required = true, (validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).any.required = true, (validate.rules).string.email = true];
  string first_name = 3;
  string last_name = 4;
  uint64 phone_number = 5;
}

message UserResponse {
  string username = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  uint64 phone_number = 5;
  string id = 15;
}
